telemetry/derive/tests/ui_fail/no_args.stderr
error: Function must have at least one argument of type `WorldStateView`.
 --> tests/ui_fail/no_args.rs:6:1
  |
6 | fn execute() -> Result<(), ()> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
